--- a/src/pages/Project/Project.css
+++ b/src/pages/Project/Project.css
@@ -14,6 +14,7 @@
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   background-color: rgba(20, 0, 30, 0.5);
+  z-index: 3000;
 }
 
 .project-abstract {
@@ -22,6 +23,7 @@
   display: flex;
   align-items: center;
   gap: 20px;
+  z-index: 3000;
 }
 
 .profile-picture {
