Enhance onboarding experience with Project and First Time Guide components; update styles and reset local storage on restart

--- a/src/components/ProjectHeader/ProjectHeader.css
+++ b/src/components/ProjectHeader/ProjectHeader.css
@@ -8,6 +8,7 @@
     padding-bottom: 0px;
     border-bottom: 1px solid #fff2;
     background-color: #0005;
+    z-index: 5000;
 }
 
 .project-header .header-container
