--- a/src/components/ProfileDropdown/ProfileDropdown.css
+++ b/src/components/ProfileDropdown/ProfileDropdown.css
@@ -18,6 +18,7 @@
   transition: opacity 0.1s, top 0.1s;
   z-index: 100;
   border: 1px solid #fff2;
+  z-index: 5000;
 }
 
 /* 🔹 Prevent Dropdown from Going Off-Screen */
