--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,20 @@
     --accent: #9300D7
 }
 
+#root
+{
+  min-height: 100vh;
+}
+
+body{
+  min-height: 100vh;
+}
 html
 {
     font-family: 'Inter', sans-serif;
     /* background: radial-gradient(circle at top, #3d004a, #1c001f); */
     background-color: #1C001F;
+    min-height: 100vh;
 }
 
 .main-container
@@ -22,4 +31,10 @@ html
     /* height: 100vh; */
     width: 100vw;
     /* overflow: hidden; */
+    height: 100%;
+}
+
+main
+{
+  height: 100%;
 }
