--- a/src/components/ALSView/ALSView.css
+++ b/src/components/ALSView/ALSView.css
@@ -547,10 +547,38 @@
   margin-right: 12px;
   color: rgba(147, 0, 215, 0.7);
   filter: drop-shadow(0 0 3px rgba(147, 0, 215, 0.5));
-  animation: pulse 1.2s infinite;
-  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  /* animation: pulse 1.2s infinite; */
+  /* animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
+.als-view-container .loading-indicator {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.als-view-container .circular-progress {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.als-view-container .play-icon {
+  position: relative;
+  z-index: 2;
+  opacity: 0.7;
+}
+
+.als-view-container .transport-btn.play-btn.loading {
+  background-color: rgba(147, 0, 215, 0.3);
+  /* cursor:  */
+}
+
+/* Add a pulsing effect to the play button when audio is downloading */
 @keyframes pulse {
   /* 0% { transform: scale(1); opacity: 0.7; } */
   0% { transform: scale(1); opacity: 1; }
